# yadro-test

./: README.md  docker-compose.yml
example/: a.json  a.txt
parse/: CMakeLists.txt  Dockerfile  http_session.cpp  http_session.hpp  install.sh  main.cpp  point.hpp  point_producer.hpp  send_points.cpp  send_points.hpp  start.sh
parse/producers/: binfile.cpp  binfile.hpp  jsonfile.cpp  jsonfile.hpp  txtfile.cpp  txtfile.hpp
server/: Dockerfile  main.py  requirements.txt
server/database/: sqlite.py
server/routes/: __init__.py  ping.py
server/routes/points/: __init__.py  add.py  clear.py  show.py
